--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <h2>Features</h2>
       <div class="features">
         <div class="feature-box">
-          <svg class="feature-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true"><path d="M15.5 14h-.79l-.28-.27a6.471 6.471 0 001.48-5.34C15.12 6.01 12.7 3.79 9.69 3.19 6.18 2.55 3 5.76 3 9.28c0 3.51 3.17 6.42 6.67 6.42a6.48 6.48 0 005.06-2.7l.27.28v.79l4.25 4.25 1.49-1.49-4.25-4.25zM9.69 14.19c-2.55 0-4.62-2.02-4.62-4.62 0-2.59 2.07-4.67 4.62-4.67 2.6 0 4.62 2.08 4.62 4.67 0 2.6-2.02 4.62-4.62 4.62z"/></svg>
+          <svg class="feature-icon" xmlns="https://img.icons8.com/ios7/512/FFFFFF/telegram-app.png" viewBox="0 0 24 24" aria-hidden="true"><path d="M15.5 14h-.79l-.28-.27a6.471 6.471 0 001.48-5.34C15.12 6.01 12.7 3.79 9.69 3.19 6.18 2.55 3 5.76 3 9.28c0 3.51 3.17 6.42 6.67 6.42a6.48 6.48 0 005.06-2.7l.27.28v.79l4.25 4.25 1.49-1.49-4.25-4.25zM9.69 14.19c-2.55 0-4.62-2.02-4.62-4.62 0-2.59 2.07-4.67 4.62-4.67 2.6 0 4.62 2.08 4.62 4.67 0 2.6-2.02 4.62-4.62 4.62z"/></svg>
           <p class="feature-text">Telegram Session</p>
         </div>
         <div class="feature-box">
